--- a/assignment-2/package.json
+++ b/assignment-2/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "gsap": "^3.13.0",
+    "lenis": "^1.3.11",
+    "mathjs": "^15.0.0",
     "ogl": "^1.0.11",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
